<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OwlSight</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="some_text">Some text</string>
    <string name="add_group_btn">Добавить группу</string>
    <string name="add_camera_btn">Добавить камеру</string>
    <string name="warning_message">Нет подключения</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign in</string>
    <string name="bg">bg</string>
    <string name="del_group">Удалить группу</string>
    <string name="monitor_m">Режим просмотра</string>
    <string name="payment">Пополнить</string>
    <string name="balance">Баланс: 0 ₽</string>
    <string name="camera_mode">Режим камеры</string>
    <string name="close">close</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stream_name">Stream Name</string>
    <string name="nocamera">No camera exists in your device</string>
    <string name="camera_not_running_properly">Camera is not running properly</string>
    <string name="restart">Restart</string>
    <string name="streaming_not_finished">Your previous broadcast still sends packets due to slow internet speed</string>
    <string name="oopps_shouldnt_happen">Oopps this shouldn\'t be happened. Please let the library developer this status</string>
    <string name="broadcast_connection_lost">Connection to media server is lost</string>
    <string name="low_bandwidth">Network speed is low. Latency is increasing.</string>
    <string name="not_eligible_for_broadcast">Your device is not eligible to broadcast. There is no hardware encoder.</string>
    <string name="no_network_connectivity">You\'re not connected to any network. Please connect to Internet</string>
    <string name="stop_broadcasting">Stop</string>
    <string name="camera_permission_is_required">Camera permission is required to run this app</string>
    <string name="microphone_permission_is_required">Microphone permission is required to run this app</string>
    <string name="permission">Permission</string>
    <string name="app_doesnot_work_without_permissions">App does not work without permissions. Please give Camera and Record Audio permission on app settings</string>
    <string name="live_indicator">On Air</string>
    <string name="permission_is_required">Camera and Microphone permission is required to run this app</string>
    <string name="first_call_open_camera">First call openCamera function</string>
    <string name="only_one_camera_exists">Only one camera exists in this device</string>
    <string name="connecting_text">Connecting&#8230;</string>
    <string name="connected_text">Connection successful</string>
    <string name="connection_error_text">Connection error</string>
    <string name="video">Video</string>
    <string name="header">Выбор вида для запуска режима Монитор</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="stream_not_started">Failed to start. Please check server url and security credentials.</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="rtsp_streamer">Custom RTSP</string>
    <string name="rtmp_streamer">Custom RTMP</string>
    <string name="default_rtmp">Default RTMP</string>
    <string name="default_rtsp">Default RTSP</string>
    <string name="from_file_rtsp">From file RTSP</string>
    <string name="from_file_rtmp">From file RTMP</string>
    <string name="surface_mode_rtsp">Surface mode RTSP</string>
    <string name="surface_mode_rtmp">Surface mode RTMP</string>
    <string name="texture_mode_rtsp">Texture mode RTSP</string>
    <string name="texture_mode_rtmp">Texture mode RTMP</string>
    <string name="display_rtmp">Display RTMP</string>
    <string name="display_rtsp">Display RTSP</string>
    <string name="opengl_rtmp">OpenGl RTMP</string>
    <string name="opengl_rtsp">OpenGl RTSP</string>
    <string name="cube_test_rtmp">Cube test RTMP</string>
    <string name="tv_select">Select your streamer</string>
    <string name="hint_rtsp">rtsp://yourendpoint</string>
    <string name="hint_rtmp">rtmp://yourendpoint</string>
    <string name="start_button">Start stream</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="select_file">Select file</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="resync_file">ReSync file</string>
    <string name="add_group_title">Введите имя для группы</string>
    <string name="microphone">Microphone</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="sepia">Sepia</string>
    <string name="aqua">Aqua</string>
    <string name="posterize">Posterize</string>
    <string name="enable_disable_fxaa">enable/disable FXAA</string>
    <string name="no_filter">No filter</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="color">Color</string>
    <string name="contrast">Contrast</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="gif">Gif</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image">Image</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="rgb_saturate">RGB saturate</string>
    <string name="ripple">Ripple</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="surface_filter">Surface filter</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="temperature">Temperature</string>
    <string name="zebra">Zebra</string>
    <string name="drawer_title">Options</string>
    <string name="protocols">Protocol</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="resolution">Resolution</string>
    <string name="video_bitrate">Bitrate (on fly)</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="fps">FPS</string>
    <string name="orientation">Orientation</string>
    <string name="hardware_rotation">Hardware rotation</string>
    <string name="samplerate">SampleRate</string>
    <string name="channel">Channel</string>
    <string name="stereo">Stereo</string>
    <string name="mono">Mono</string>
    <string name="echo_canceler">Echo canceler</string>
    <string name="camera">Camera</string>
    <string name="wowza_auth">Wowza Auth</string>
    <string name="wowza_user">User</string>
    <string name="wowza_password">Password</string>
    <string name="noise_suppressor">Noise suppressor</string>
    <string name="alert_cancel">Отмена</string>
    <string name="hello_world">Hello world!</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Don\'t have account yet? Register.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Телефон</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Повтор пароля</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Регистрация</string>
    <string name="signUpBtn">зарегистрироваться</string>
    <string name="cam_btn_next">Далее</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="logo">Logo</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Second name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add_camera">Добавление камеры</string>
    <string name="material_calendar_monday">Пн</string>
    <string name="iAgree">Я согласен с</string>
    <string name="agreement"><u>соглашением об использовании</u></string>
    <string name="and">и</string>
    <string name="privacyPolicy"><u>политикой конфедициальности</u></string>
    <string name="wasRegister">Уже зарегистрированы? </string>
    <string name="goToLogin"><u>Авторизация</u></string>
    <string name="user_name_err">Необходимо заполнить имя и фамилию</string>
    <string name="user_email_err">Необходимо указать адрес электронной почты</string>
    <string name="user_phone_err">Необходимо указать телефон</string>
    <string name="user_pass_err">Необходимо ввести пароль</string>
    <string name="user_conf_pass_err">Необходимо ввести пароль еще раз</string>
    <string name="user_consent_err">Необходимо подтвердить согласие</string>
    <string name="connecting_to_camera">Подключение к камере</string>
    <string name="please_wait">Пожалуйста подождите</string>
</resources>