<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgSignUp"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBgSignUp"
        android:minHeight="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="24dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signUp"
            android:textColor="@color/txtToolBar"
            android:textSize="19sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sign_up_fields_bg"
                android:textColorHint="@color/colorHint"
                app:hintAnimationEnabled="false"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:foregroundGravity="center"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBack"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvErrorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/user_name_err"
                android:textColor="@color/color_et_error"
                android:textSize="13sp"
                android:visibility="gone" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/sign_up_fields_bg"
                android:textColorHint="@color/colorHint"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:foregroundGravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBack"
                    android:textCursorDrawable="@drawable/edit_text_cursor_style"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvErrorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/user_email_err"
                android:textColor="@color/color_et_error"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/sign_up_fields_bg"
                android:foregroundGravity="center"
                android:textColorHint="@color/colorHint"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:foregroundGravity="center"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBack"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvErrorPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/user_phone_err"
                android:textColor="@color/color_et_error"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/sign_up_fields_bg"
                android:textColorHint="@color/colorHint"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:foregroundGravity="center"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBack"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvErrorPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/user_pass_err"
                android:textColor="@color/color_et_error"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/sign_up_fields_bg"
                android:textColorHint="@color/colorHint"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:foregroundGravity="center"
                    android:gravity="center_vertical"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:textColor="@color/colorBack"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvErrorConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/user_conf_pass_err"
                android:textColor="@color/color_et_error"
                android:textSize="13sp"
                android:visibility="gone" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbConfirmPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/iAgree"
                    android:textColor="#FFF"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"

                    android:textColor="#FFF"
                    android:text="@string/agreement"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and"
                    android:textColor="#FFF"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="#FFF"
                    android:text="@string/privacyPolicy"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvErrorConfirmPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/user_consent_err"
                android:textColor="@color/color_et_error"
                android:textSize="13sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/sign_in_button"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/signUpBtn"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:textColor="#FFF"
                android:text="@string/wasRegister"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:textColor="#FFF"
                android:text="@string/goToLogin"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
