<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:text="@string/connecting_to_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/please_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <View
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/btn_cancel_camera_loading_dialog"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textColor="@color/caldroid_sky_blue"
        android:text="@string/alert_cancel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>