<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgSignUp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textSize="22sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_logo"
            android:contentDescription="@string/logo"
            android:scaleType="fitEnd" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="50dp"
            android:background="@android:color/background_light"
            android:drawableStart="@drawable/email_png_test"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorBack"
            android:textColorHint="@color/background"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="50dp"
            android:background="@android:color/background_light"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorBack"
            android:textColorHint="@color/background"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/sign_in_button"
            android:gravity="center"
            android:paddingStart="50dp"
            android:paddingTop="0dp"
            android:paddingEnd="50dp"
            android:paddingBottom="0dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="172dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/newUser"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>
